# toolable

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  example_tool.py  pyproject.toml  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pre-commit.yml  publish.yml
.spec/: PRD.md
docs/: MIGRATION.md  agent-features-reference.md  feature-showcase.md  mcp-features-status.md  test-coverage-report.md
docs/plans/: 2025-11-30-fork-typer-to-toolable.md  2025-11-30-test-coverage-90-percent-design.md  2025-11-30-test-coverage-90-percent.md
examples/: complete_demo.py  demo_tool.py  mcp_features_demo.py
src/toolable/: __init__.py  _completion_classes.py  _completion_shared.py  _typing.py  cli.py  completion.py  core.py  decorators.py  discovery.py  errors.py  input.py  main.py  models.py  notifications.py  params.py  registry.py  response.py  rich_utils.py  sampling.py  session.py  streaming.py  testing.py  utils.py
tests/: test_agent_features.py  test_cli.py  test_decorators.py  test_discovery.py  test_errors.py  test_input.py  test_integration.py  test_notifications.py  test_registry.py  test_response.py  test_sampling.py  test_security_fixes.py  test_session.py  test_streaming.py
tests/fixtures/: broken_tool.py  invalid_json_tool.py  slow_tool.py  tool_with_prompt.py  tool_with_resource.py  valid_tool.py
