[project]
name = "toolable"
version = "0.1.0"
description = "Make any CLI executable a full-featured agent tool without requiring a server"
readme = "README.md"
authors = [
    { name = "AnthemFlynn", email = "AnthemFlynn@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.scripts]
toolable = "toolable:main"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"
