[project]
name = "toolable"
version = "0.1.0"
description = "Make any CLI executable a full-featured agent tool without requiring a server"
readme = "README.md"
license = {text = "MIT"}
authors = [
    { name = "AnthemFlynn", email = "AnthemFlynn@users.noreply.github.com" }
]
requires-python = ">=3.10"
keywords = ["cli", "tools", "agent", "llm", "mcp", "agent-tools", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.0.0",
    "typing-extensions>=3.7.4.3",
    "pydantic>=2.0",
    "shellingham>=1.3.0",
    "rich>=10.11.0",
]

[project.urls]
Homepage = "https://github.com/AnthemFlynn/toolable"
Documentation = "https://github.com/AnthemFlynn/toolable#readme"
Repository = "https://github.com/AnthemFlynn/toolable"
Issues = "https://github.com/AnthemFlynn/toolable/issues"
Changelog = "https://github.com/AnthemFlynn/toolable/releases"

[project.optional-dependencies]
standard = [
    "shellingham>=1.3.0",
    "rich>=10.11.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
    "pre-commit",
]

[project.scripts]
toolable = "toolable:main"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"
